# czkawka-tauri

./: .gitignore  Cargo.toml  Taskfile.yml  UPGRADE_LOG.md  biome.json  config.json  package.json  pnpm-lock.yaml  rust编译排错.md  test_thumbnails.md  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
.kiro/specs/filter-card-optimization/: design.md  requirements.md  tasks.md
.kiro/specs/selection-assistant/: design.md  requirements.md  tasks.md
docs/: build-guide.md  nsis-install-path-options.md  prebuilt-packages.md  similarity-system.md  windows-ci-setup.md
scripts/: dev-env.ps1  package-dav1d.ps1  rename-branches.ps1  run.ts  set-pkg-version.ts  verify-windows-build.ps1
tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
tauri/capabilities/: default.json
tauri/src/: bad_extensions.rs  big_files.rs  broken_files.rs  duplicate_files.rs  empty_files.rs  empty_folders.rs  image.rs  invalid_symlinks.rs  main.rs  move_files.rs  music_duplicates.rs  preset.rs  progress.rs  save_result.rs  scaner.rs  settings.rs  similar_images.rs  similar_videos.rs  temporary_files.rs  thumbnail.rs
ui/: components.json  input.css  output.css  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: app.tsx  consts.ts  ipc.ts  shim.d.ts  types.ts
ui/src/atom/: card-config.ts  filter-panel.ts  format-filter.ts  local-features.ts  primitive.ts  selection-assistant.ts  similar-images-presets.ts  theme.ts  tools.ts
ui/src/components/: box-reveal.tsx  data-table.tsx  dynamic-preview-cell.tsx  (+13 more)
(+147 files in other folders)
