[package]
name = "czkawka-tauri"
version = "1.2.0"
edition = "2024"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "A Tauri frontend of Czkawka on macOS and Windows"
repository = "https://github.com/shixinhuang99/czkawka-tauri"
license = "MIT"
publish = false

[[bin]]
name = "CzkawkaTauri"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
crossbeam-channel = "0.5.14"
czkawka_core = { version = "10.0.0", default-features = false, features = [
  "libavif",
] }
dircpy = { version = "0.3.19", default-features = false }
home = "0.5.11"
humansize = "2.1.3"
image = { version = "0.25.6", features = ["png", "jpeg", "webp", "avif"] }
image_hasher = "3.0.0"
infer = "0.19.0"
jxl-oxide = { version = "0.12.2", features = ["image"] }
md5 = "0.7"
mime_guess = "2"
percent-encoding = "2"
rayon = "1.10.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-single-instance = "2.2.2"
trash = "5.2.2"
vid_dup_finder_lib = "0.4.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
ffmpeg = []
